- Added extra fields in callback of google sign in - Fixed user filtering when checking for duplicate emails - Added socialProvider field in User Model - Added Nodemailer in email providers

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": ***REMOVED***
     "lodash": "4.x.x",
     "strapi": "3.0.0-alpha.14.2",
+    "strapi-email-nodemailer": "^0.2.1",
     "strapi-hook-mongoose": "3.0.0-alpha.14.2"
 ***REMOVED***,
   "author": ***REMOVED***
