--- a/plugins/users-permissions/models/User.settings.json
+++ b/plugins/users-permissions/models/User.settings.json
@@ -49,6 +49,10 @@
       "default": "",
       "type": "string",
       "required": true
+***REMOVED***,
+    "socialProvider": ***REMOVED***
+      "default": "",
+      "type": "string"
 ***REMOVED***
 ***REMOVED***,
   "collectionName": "users-permissions_user"
