- Added image and image url properties to users - Added extra fields when logging in with facebook

--- a/plugins/users-permissions/models/User.settings.json
+++ b/plugins/users-permissions/models/User.settings.json
@@ -53,6 +53,16 @@
     "socialProvider": ***REMOVED***
       "default": "",
       "type": "string"
+***REMOVED***,
+    "image": ***REMOVED***
+      "model": "file",
+      "via": "related",
+      "plugin": "upload",
+      "required": false
+***REMOVED***,
+    "imageUrl": ***REMOVED***
+      "default": "",
+      "type": "string"
 ***REMOVED***
 ***REMOVED***,
   "collectionName": "users-permissions_user"
