- Product Model: Added wishlists field - Modified actions/permissions - User Model: Added wishlist and address fields

--- a/api/product/models/Product.settings.json
+++ b/api/product/models/Product.settings.json
@@ -80,6 +80,10 @@
     "category": ***REMOVED***
       "model": "category",
       "via": "products"
+***REMOVED***,
+    "wishlists": ***REMOVED***
+      "collection": "wishlist",
+      "via": "products"
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
