- Added Size Model with Routes - Modified Product Model (removed color enumaration and added sizes property) - Changed some admin GUI text - Added sanitize-html node module

--- a/api/size/models/Size.settings.json
+++ b/api/size/models/Size.settings.json
@@ -1,27 +1,21 @@
 ***REMOVED***
   "connection": "default",
-  "collectionName": "wishlist",
+  "collectionName": "",
   "info": ***REMOVED***
-    "name": "wishlist",
+    "name": "size",
     "description": ""
 ***REMOVED***,
   "options": ***REMOVED***
     "timestamps": true
 ***REMOVED***,
   "attributes": ***REMOVED***
-    "products": ***REMOVED***
-      "collection": "product",
-      "dominant": true,
-      "via": "wishlists"
-***REMOVED***,
     "name": ***REMOVED***
       "default": "",
       "type": "string"
 ***REMOVED***,
-    "user": ***REMOVED***
-      "model": "user",
-      "via": "wishlist",
-      "plugin": "users-permissions"
+    "products": ***REMOVED***
+      "collection": "product",
+      "via": "sizes"
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
