--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 ***REMOVED***,
   "dependencies": ***REMOVED***
     "lodash": "4.x.x",
+    "sanitize-html": "^1.19.1",
     "strapi": "3.0.0-alpha.14.2",
     "strapi-email-nodemailer": "^0.2.1",
     "strapi-hook-mongoose": "3.0.0-alpha.14.2"
