--- a/api/product/models/Product.settings.json
+++ b/api/product/models/Product.settings.json
@@ -48,26 +48,6 @@
       "default": "",
       "type": "integer"
 ***REMOVED***,
-    "color": ***REMOVED***
-      "default": "",
-      "type": "enumeration",
-      "enum": [
-        "red",
-        " blue",
-        " black",
-        " yellow"
-      ]
-***REMOVED***,
-    "size": ***REMOVED***
-      "default": "",
-      "type": "enumeration",
-      "enum": [
-        "L",
-        " XL",
-        " S",
-        " M"
-      ]
-***REMOVED***,
     "weight": ***REMOVED***
       "default": "",
       "type": "float"
@@ -84,6 +64,11 @@
     "wishlists": ***REMOVED***
       "collection": "wishlist",
       "via": "products"
+***REMOVED***,
+    "sizes": ***REMOVED***
+      "collection": "size",
+      "via": "products",
+      "dominant": true
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
