- Added GET /categories/:_id/subcategories endpoint to categories - Added findSubCategories method in category controller - Added fetchSubCategories method in category service - Added /productsByCategory/:_id endpoint to products - Added findOneByCategory method in product controller - Added default values for oldPrice, newPrice, discount, ratingsCount, ratingsValue, availabilityCount, and weight fields in product models. -  Added fetchByCategory in product service - Modified some permissions

--- a/api/product/models/Product.settings.json
+++ b/api/product/models/Product.settings.json
@@ -21,23 +21,23 @@
       "required": false
 ***REMOVED***,
     "oldPrice": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "float"
 ***REMOVED***,
     "newPrice": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "float"
 ***REMOVED***,
     "discount": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "float"
 ***REMOVED***,
     "ratingsCount": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "integer"
 ***REMOVED***,
     "ratingsValue": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "float"
 ***REMOVED***,
     "description": ***REMOVED***
@@ -45,11 +45,11 @@
       "type": "text"
 ***REMOVED***,
     "availibilityCount": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "integer"
 ***REMOVED***,
     "weight": ***REMOVED***
-      "default": "",
+      "default": 0,
       "type": "float"
 ***REMOVED***,
     "colors": ***REMOVED***
