--- a/api/category/models/Category.settings.json
+++ b/api/category/models/Category.settings.json
@@ -11,7 +11,6 @@
   "attributes": ***REMOVED***
     "name": ***REMOVED***
       "default": "",
-      "unique": true,
       "type": "string",
       "required": true
 ***REMOVED***,
@@ -20,11 +19,17 @@
       "type": "boolean"
 ***REMOVED***,
     "parent": ***REMOVED***
-      "model": "category"
+      "model": "category",
+      "via": "subCategories"
 ***REMOVED***,
     "products": ***REMOVED***
       "collection": "product",
       "via": "category"
+***REMOVED***,
+    "subCategories": ***REMOVED***
+      "collection": "category",
+      "via": "parent",
+      "autoPopulate": true
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
