- Added POST /wishlists/addToWishlist endpoint - Added POST /wishlists/removeFromWishlist endpoint - Added related functions in wishlist service and controller - Removed email from Address model

--- a/api/product/models/Product.settings.json
+++ b/api/product/models/Product.settings.json
@@ -18,7 +18,8 @@
       "collection": "file",
       "via": "related",
       "plugin": "upload",
-      "required": false
+      "required": false,
+      "autoPopulate": true
 ***REMOVED***,
     "oldPrice": ***REMOVED***
       "default": 0,
