Added Cart, OrderItem and Order models, routers, controllers and services

--- a/plugins/users-permissions/models/User.settings.json
+++ b/plugins/users-permissions/models/User.settings.json
@@ -71,6 +71,14 @@
     "address": ***REMOVED***
       "model": "address",
       "via": "user"
+***REMOVED***,
+    "cart": ***REMOVED***
+      "model": "cart",
+      "via": "user"
+***REMOVED***,
+    "order": ***REMOVED***
+      "model": "order",
+      "via": "user"
 ***REMOVED***
 ***REMOVED***,
   "collectionName": "users-permissions_user"
